force-app/main/default/objects/dw_acctg_appo__x/dw_acctg_appo__x.object-meta.xml
<CustomObject>
    <description>dw_acctg$appo</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_acctg$appo</externalName>
    <label>dw_acctg$appo</label>
    <pluralLabel>dw_acctg$appo</pluralLabel>
</CustomObject>