force-app/main/default/objects/dw_acctg_appo__x/fields/acct_desc__c.field-meta.xml
<CustomField>
    <fullName>acct_desc__c</fullName>
    <description>acct_desc</description>
    <externalDeveloperName>acct_desc</externalDeveloperName>
    <label>acct_desc</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>