force-app/main/default/objects/dw_acctg_appo__x/fields/acct_id__c.field-meta.xml
<CustomField>
    <fullName>acct_id__c</fullName>
    <description>acct_id</description>
    <externalDeveloperName>acct_id</externalDeveloperName>
    <label>acct_id</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>