force-app/main/default/objects/dw_acctg_appo__x/fields/invoice_dt__c.field-meta.xml
<CustomField>
    <fullName>invoice_dt__c</fullName>
    <description>invoice_dt</description>
    <externalDeveloperName>invoice_dt</externalDeveloperName>
    <label>invoice_dt</label>
    <type>DateTime</type>
</CustomField>