force-app/main/default/objects/dw_acctg_appo__x/fields/invoice_nbr__c.field-meta.xml
<CustomField>
    <fullName>invoice_nbr__c</fullName>
    <description>invoice_nbr</description>
    <externalDeveloperName>invoice_nbr</externalDeveloperName>
    <label>invoice_nbr</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>