force-app/main/default/objects/dw_acctg_appo__x/fields/item_desc__c.field-meta.xml
<CustomField>
    <fullName>item_desc__c</fullName>
    <description>item_desc</description>
    <externalDeveloperName>item_desc</externalDeveloperName>
    <label>item_desc</label>
    <length>100</length>
    <type>Text</type>
</CustomField>