force-app/main/default/objects/dw_acctg_appo__x/fields/item_id__c.field-meta.xml
<CustomField>
    <fullName>item_id__c</fullName>
    <description>item_id</description>
    <externalDeveloperName>item_id</externalDeveloperName>
    <label>item_id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>