force-app/main/default/objects/dw_acctg_appo__x/fields/item_qty__c.field-meta.xml
<CustomField>
    <fullName>item_qty__c</fullName>
    <description>item_qty</description>
    <externalDeveloperName>item_qty</externalDeveloperName>
    <label>item_qty</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>