force-app/main/default/objects/dw_acctg_appo__x/fields/journal_amt__c.field-meta.xml
<CustomField>
    <fullName>journal_amt__c</fullName>
    <description>journal_amt</description>
    <externalDeveloperName>journal_amt</externalDeveloperName>
    <label>journal_amt</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>