force-app/main/default/objects/dw_acctg_appo__x/fields/journal_ref_txt__c.field-meta.xml
<CustomField>
    <fullName>journal_ref_txt__c</fullName>
    <description>journal_ref_txt</description>
    <externalDeveloperName>journal_ref_txt</externalDeveloperName>
    <label>journal_ref_txt</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>