force-app/main/default/objects/dw_acctg_appo__x/fields/journal_txn_type__c.field-meta.xml
<CustomField>
    <fullName>journal_txn_type__c</fullName>
    <description>journal_txn_type</description>
    <externalDeveloperName>journal_txn_type</externalDeveloperName>
    <label>journal_txn_type</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>