force-app/main/default/objects/dw_acctg_appo__x/fields/matl_trans_nbr__c.field-meta.xml
<CustomField>
    <fullName>matl_trans_nbr__c</fullName>
    <description>matl_trans_nbr</description>
    <externalDeveloperName>matl_trans_nbr</externalDeveloperName>
    <label>matl_trans_nbr</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>