force-app/main/default/objects/dw_acctg_appo__x/fields/matltran_cost__c.field-meta.xml
<CustomField>
    <fullName>matltran_cost__c</fullName>
    <description>matltran_cost</description>
    <externalDeveloperName>matltran_cost</externalDeveloperName>
    <label>matltran_cost</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>