force-app/main/default/objects/dw_acctg_appo__x/fields/notes__c.field-meta.xml
<CustomField>
    <fullName>notes__c</fullName>
    <description>notes</description>
    <externalDeveloperName>notes</externalDeveloperName>
    <label>notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>