force-app/main/default/objects/dw_acctg_appo__x/fields/p_m_t_cd__c.field-meta.xml
<CustomField>
    <fullName>p_m_t_cd__c</fullName>
    <description>p_m_t_cd</description>
    <externalDeveloperName>p_m_t_cd</externalDeveloperName>
    <label>p_m_t_cd</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>