force-app/main/default/objects/dw_acctg_appo__x/fields/po_ln__c.field-meta.xml
<CustomField>
    <fullName>po_ln__c</fullName>
    <description>po_ln</description>
    <externalDeveloperName>po_ln</externalDeveloperName>
    <label>po_ln</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>