force-app/main/default/objects/dw_acctg_appo__x/fields/po_num__c.field-meta.xml
<CustomField>
    <fullName>po_num__c</fullName>
    <description>po_num</description>
    <externalDeveloperName>po_num</externalDeveloperName>
    <label>po_num</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>