force-app/main/default/objects/dw_acctg_appo__x/fields/product_cd__c.field-meta.xml
<CustomField>
    <fullName>product_cd__c</fullName>
    <description>product_cd</description>
    <externalDeveloperName>product_cd</externalDeveloperName>
    <label>product_cd</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>