force-app/main/default/objects/dw_acctg_appo__x/fields/project_id__c.field-meta.xml
<CustomField>
    <fullName>project_id__c</fullName>
    <description>project_id</description>
    <externalDeveloperName>project_id</externalDeveloperName>
    <label>project_id</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>