force-app/main/default/objects/dw_acctg_appo__x/fields/row_id__c.field-meta.xml
<CustomField>
    <fullName>row_id__c</fullName>
    <description>row_id</description>
    <externalDeveloperName>row_id</externalDeveloperName>
    <label>row_id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>