force-app/main/default/objects/dw_acctg_appo__x/fields/run_dt__c.field-meta.xml
<CustomField>
    <fullName>run_dt__c</fullName>
    <description>run_dt</description>
    <externalDeveloperName>run_dt</externalDeveloperName>
    <label>run_dt</label>
    <type>DateTime</type>
</CustomField>