force-app/main/default/objects/dw_acctg_appo__x/fields/std_today_cost_amt__c.field-meta.xml
<CustomField>
    <fullName>std_today_cost_amt__c</fullName>
    <description>std_today_cost_amt</description>
    <externalDeveloperName>std_today_cost_amt</externalDeveloperName>
    <label>std_today_cost_amt</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>