force-app/main/default/objects/dw_acctg_appo__x/fields/tariff_dt__c.field-meta.xml
<CustomField>
    <fullName>tariff_dt__c</fullName>
    <description>tariff_dt</description>
    <externalDeveloperName>tariff_dt</externalDeveloperName>
    <label>tariff_dt</label>
    <type>Date</type>
</CustomField>