force-app/main/default/objects/dw_acctg_appo__x/fields/tariff_per_item_amt__c.field-meta.xml
<CustomField>
    <fullName>tariff_per_item_amt__c</fullName>
    <description>tariff_per_item_amt</description>
    <externalDeveloperName>tariff_per_item_amt</externalDeveloperName>
    <label>tariff_per_item_amt</label>
    <precision>8</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>