force-app/main/default/objects/dw_acctg_appo__x/fields/trans_dt__c.field-meta.xml
<CustomField>
    <fullName>trans_dt__c</fullName>
    <description>trans_dt</description>
    <externalDeveloperName>trans_dt</externalDeveloperName>
    <label>trans_dt</label>
    <type>DateTime</type>
</CustomField>