force-app/main/default/objects/dw_acctg_appo__x/fields/true_po_cost_amt__c.field-meta.xml
<CustomField>
    <fullName>true_po_cost_amt__c</fullName>
    <description>true_po_cost_amt</description>
    <externalDeveloperName>true_po_cost_amt</externalDeveloperName>
    <label>true_po_cost_amt</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>