force-app/main/default/objects/dw_acctg_appo__x/fields/voucher_nbr__c.field-meta.xml
<CustomField>
    <fullName>voucher_nbr__c</fullName>
    <description>voucher_nbr</description>
    <externalDeveloperName>voucher_nbr</externalDeveloperName>
    <label>voucher_nbr</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>